# learning-opencv

./: .gitignore  CMakeLists.txt  README.md
cmake/: utils.cmake
src/common/: CMakeLists.txt  Log.h  Window.cpp  Window.h
src/lesson001_hello_opencv/: CMakeLists.txt  main.cpp
src/lesson001_load_show_image/: main.cpp
src/lesson002_basic/: CMakeLists.txt  main.cpp
src/lesson002_create_update_save_image/: CMakeLists.txt  main.cpp
src/lesson003_transform_image/: main.cpp
src/lesson004_perspective_transform/: main.cpp
src/lesson005_color_space/: main.cpp
src/lesson006_image_filter/: main.cpp
src/lesson007_image_edge_detection/: main.cpp
src/lesson008_image_morphological_operations/: main.cpp
src/lesson009_image_thresholding/: main.cpp
src/lesson010_image_hist/: CMakeLists.txt  main.cpp
src/lesson099_open_camera/: main.cpp
src/lesson100_edge_detection/: main.cpp
